--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 .ctx{
     background-color: white;
     border:3px solid var(--darker-blue);
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202772597306032178/nso_handwriting.png?ex=65ceac45&is=65bc3745&hm=80f1d9396a2fe4bc2da2dcfe584f961f8cadc7672fd98b70175e5cdd9373d6bb&), auto;
 }
 
 div[itemprop="Paint"]:before {
@@ -110,7 +111,7 @@ div[itemprop="Paint"]:before {
     height: 4rem;
     text-align: center;
     background-color: transparent;
-    cursor: pointer;
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ceaa11&is=65bc3511&hm=e6cd59e5fd1e414d75d684c0ada9479f6c7aa1cdb7ff3418b6352c83b47a159b&), auto;
     margin: 1rem;
 }
 .form-box{
@@ -119,7 +120,7 @@ div[itemprop="Paint"]:before {
     width: 60%;
     height: 60%;
     background-color: transparent;
-    cursor: pointer;
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ceaa11&is=65bc3511&hm=e6cd59e5fd1e414d75d684c0ada9479f6c7aa1cdb7ff3418b6352c83b47a159b&), auto;
 }
 .linea {
     margin: 5px auto;
@@ -128,7 +129,7 @@ div[itemprop="Paint"]:before {
     transform: rotate(45deg);
     background-color: #4D23CD;
     opacity: 0.5;
-    cursor: pointer;
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ceaa11&is=65bc3511&hm=e6cd59e5fd1e414d75d684c0ada9479f6c7aa1cdb7ff3418b6352c83b47a159b&), auto;
 }
 .cuadrado{
     margin: 5px auto;
@@ -136,7 +137,7 @@ div[itemprop="Paint"]:before {
     height: 50%;
     border: solid 4px #4D23CD;
     opacity: 0.5;
-    cursor: pointer;
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ceaa11&is=65bc3511&hm=e6cd59e5fd1e414d75d684c0ada9479f6c7aa1cdb7ff3418b6352c83b47a159b&), auto;
 }
 .rectangle{
     margin: 5px auto;
@@ -144,7 +145,7 @@ div[itemprop="Paint"]:before {
     height: 40%;
     border: solid 4px #4D23CD;
     opacity: 0.5;
-    cursor: pointer;
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ceaa11&is=65bc3511&hm=e6cd59e5fd1e414d75d684c0ada9479f6c7aa1cdb7ff3418b6352c83b47a159b&), auto;
 }
 .circle{
     margin: 5px auto;
@@ -153,5 +154,5 @@ div[itemprop="Paint"]:before {
     border-radius: 50%;
     border: solid 4px #4D23CD;
     opacity: 0.5;
-    cursor: pointer;
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ceaa11&is=65bc3511&hm=e6cd59e5fd1e414d75d684c0ada9479f6c7aa1cdb7ff3418b6352c83b47a159b&), auto;
 }
