correcion de assets

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 
 body {
-    background-image: url(https://cdn.discordapp.com/attachments/961277968259379220/1066089744414552137/FHDbgresizebetter.png); 
+    background-image: url(https://files.catbox.moe/wfrobn.png); 
     background-color: transparent;
     background-attachment: fixed;
     font-family: 'pixelify sans';
