--- a/style.css
+++ b/style.css
@@ -103,8 +103,12 @@ div[itemprop="Paint"]:before {
 }
 
 .formas {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     position: relative;
     float: left;
+    max-height: 100vh;
 }
 
 .icon{
@@ -207,5 +211,11 @@ miniicon{
 }
 .picbtn{
     width: 22px;margin: 1 rem;
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ea5991&is=65d7e491&hm=559afa2ed09933e52d6cdaec3622d855116efc925b61f31b99bf947bdb4369df&), auto;
+}
+.move{
+    cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ea5991&is=65d7e491&hm=559afa2ed09933e52d6cdaec3622d855116efc925b61f31b99bf947bdb4369df&), auto;
+}
+.resize{
     cursor: url(https://cdn.discordapp.com/attachments/747285850609549424/1202770232389795920/nso_point.png?ex=65ea5991&is=65d7e491&hm=559afa2ed09933e52d6cdaec3622d855116efc925b61f31b99bf947bdb4369df&), auto;
 }
